take action spacing fixed

--- a/docroot/sites/all/themes/ambitious/css/issue-fixing.css
+++ b/docroot/sites/all/themes/ambitious/css/issue-fixing.css
@@ -1133,7 +1133,7 @@ html.js fieldset.collapsed {
 }
 
 /* line 791, ../sass/issue-fixing.scss */
-article.node-223806 {
+article.node-223806, article.node-223591 {
   padding: 40px 80px;
   position: relative;
   margin: 0 0 30px;
@@ -1144,7 +1144,12 @@ article.node-223806 {
   margin-bottom: 30px;
 }
 
-/* line 802, ../sass/issue-fixing.scss */
+/* line 801, ../sass/issue-fixing.scss */
+.easy-breadcrumb {
+  position: absolute;
+  width: 100%;
+}
+/* line 804, ../sass/issue-fixing.scss */
 .easy-breadcrumb .region-breadcrumb {
   margin-top: -120px;
 }
